syntax = "proto3";

import "google/protobuf/timestamp.proto";

package users;
option go_package = "ms/gateway/pb";
import "shared.proto";

service UsersService {
    rpc FindOneUserById(FindOneUserByIdRequest) returns (FindOneUserByIdResponse);
    rpc FindOneUserByEmail(FindOneUserByEmailRequest) returns (FindOneUserByEmailResponse);
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (shared.EmptyBody);
    rpc FindAllUsers(FindAllUsersRequest) returns (FindAllUsersResponse);
}

message FindOneUserByIdRequest {
    int32 id = 1;
}

message FindOneUserByEmailRequest {
    string email = 1;
}

message FindOneUserByIdResponse {
    User user = 1;
}

message FindOneUserByEmailResponse {
    User user = 1;
}

message User {
    int32 id = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;
    string mobileNumber = 5;
    google.protobuf.Timestamp createdAt = 6;
    google.protobuf.Timestamp updatedAt = 7;
}

message CreateUserRequest {
    string firstName = 1;
    string lastName = 2;
    string email = 3;
    string password = 4;
}

message CreateUserResponse {
    User user = 1;
}

message UpdateUserRequest {
    int32 id = 1;
    optional string firstName = 2;
    optional string lastName = 3;
    optional string email = 4;
    optional string mobileNumber = 5;
}

message UpdateUserResponse {
    User user = 1;
}

message DeleteUserRequest {
    int32 id = 1;
}

message FindAllUsersRequest {
    int32 page = 1;
    int32 limit = 2;
}

message FindAllUsersResponse {
    int32 page = 1;
    int32 limit = 2;
    int64 count = 3;
    repeated User users = 4;
}